parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    DCOLON
    DEINDENT
    ENUM
    FOR
    IMPL
    IN
    INDENT
    LBRACKET
    PUB
    RBRACKET
    REF
    STATIC
    UNION
    WHERE

Grammar

Rule 0     S' -> program
Rule 1     program -> topdecl
Rule 2     program -> topdecl program
Rule 3     topdecl -> funcdecl
Rule 4     topdecl -> structdecl
Rule 5     topdecl -> traitdecl
Rule 6     topdecl -> decl
Rule 7     funcdecl -> signature body
Rule 8     signature -> FN ID signaturei
Rule 9     signaturei -> signaturep
Rule 10    signaturei -> signaturenp
Rule 11    signaturep -> LPAREN sigparams RPAREN ARROW type
Rule 12    signaturep -> LPAREN sigparams RPAREN
Rule 13    signaturenp -> LPAREN RPAREN ARROW type
Rule 14    signaturenp -> LPAREN RPAREN
Rule 15    sigparams -> sigparam
Rule 16    sigparams -> sigparam COMMA sigparams
Rule 17    sigparam -> ID COLON type
Rule 18    body -> LBRACE stmts RBRACE
Rule 19    structdecl -> STRUCT ID LBRACE structfields RBRACE
Rule 20    structfields -> structfield
Rule 21    structfields -> structfield COMMA structfields
Rule 22    structfield -> ID COLON type
Rule 23    traitdecl -> TRAIT ID LBRACE traitbody RBRACE
Rule 24    traitbody -> traitsignatures
Rule 25    traitbody -> traitsignatures traitbody
Rule 26    traitsignatures -> signature SCOLON
Rule 27    traitsignatures -> funcdecl
Rule 28    traitsignatures -> traitmethod
Rule 29    traitmethod -> FN ID traitsignature
Rule 30    traitsignature -> traitsignaturep SCOLON
Rule 31    traitsignature -> traitsignaturep body
Rule 32    traitsignaturep -> LPAREN BITAND SELFTYPE RPAREN ARROW type
Rule 33    traitsignaturep -> LPAREN BITAND SELFTYPE RPAREN
Rule 34    traitsignaturep -> LPAREN BITAND SELFTYPE COMMA sigparams RPAREN ARROW type
Rule 35    traitsignaturep -> LPAREN BITAND SELFTYPE COMMA sigparams RPAREN
Rule 36    stmts -> stmt
Rule 37    stmts -> stmt stmts
Rule 38    stmt -> decl
Rule 39    stmt -> exp SCOLON
Rule 40    stmt -> ifr
Rule 41    stmt -> LOOP LBRACE stmts RBRACE
Rule 42    stmt -> WHILE exp LBRACE stmts RBRACE
Rule 43    stmt -> RETURN exp SCOLON
Rule 44    stmt -> BREAK SCOLON
Rule 45    stmt -> CONTINUE SCOLON
Rule 46    ifr -> IF exp LBRACE stmts RBRACE
Rule 47    ifr -> IF exp LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
Rule 48    ifr -> IF exp LBRACE stmts RBRACE ELSE ifr
Rule 49    decl -> LET ID typedecl ATTRIB exp SCOLON
Rule 50    decl -> LET MUT ID typedecl ATTRIB exp SCOLON
Rule 51    decl -> CONST ID COLON type ATTRIB exp SCOLON
Rule 52    typedecl -> COLON type
Rule 53    typedecl -> <empty>
Rule 54    exp -> exp_assign
Rule 55    exp_assign -> ID ATTRIB exp_assign
Rule 56    exp_assign -> ID PLUSATTRIB exp_assign
Rule 57    exp_assign -> ID MINUSATTRIB exp_assign
Rule 58    exp_assign -> ID TIMESATTRIB exp_assign
Rule 59    exp_assign -> ID DIVIDEATTRIB exp_assign
Rule 60    exp_assign -> exp_or
Rule 61    exp_or -> exp_or LOGOR exp_and
Rule 62    exp_or -> exp_and
Rule 63    exp_and -> exp_and LOGAND exp_rel
Rule 64    exp_and -> exp_rel
Rule 65    exp_rel -> exp_bitor EQUALS exp_bitor
Rule 66    exp_rel -> exp_bitor NEQUALS exp_bitor
Rule 67    exp_rel -> exp_bitor LESS exp_bitor
Rule 68    exp_rel -> exp_bitor GRTR exp_bitor
Rule 69    exp_rel -> exp_bitor LESSEQ exp_bitor
Rule 70    exp_rel -> exp_bitor GRTREQ exp_bitor
Rule 71    exp_rel -> exp_bitor
Rule 72    exp_bitor -> exp_bitor BITOR exp_bitxor
Rule 73    exp_bitor -> exp_bitxor
Rule 74    exp_bitxor -> exp_bitxor BITXOR exp_bitand
Rule 75    exp_bitxor -> exp_bitand
Rule 76    exp_bitand -> exp_bitand BITAND exp_shift
Rule 77    exp_bitand -> exp_shift
Rule 78    exp_shift -> exp_shift LSHIFT exp_add
Rule 79    exp_shift -> exp_shift RSHIFT exp_add
Rule 80    exp_shift -> exp_add
Rule 81    exp_add -> exp_add PLUS exp_mul
Rule 82    exp_add -> exp_add MINUS exp_mul
Rule 83    exp_add -> exp_mul
Rule 84    exp_mul -> exp_mul TIMES exp_unary
Rule 85    exp_mul -> exp_mul DIVIDE exp_unary
Rule 86    exp_mul -> exp_mul MODL exp_unary
Rule 87    exp_mul -> exp_unary
Rule 88    exp_unary -> LOGNOT exp_unary
Rule 89    exp_unary -> MINUS exp_unary
Rule 90    exp_unary -> exp_primary
Rule 91    exp_primary -> call
Rule 92    exp_primary -> NUMBER
Rule 93    exp_primary -> ID
Rule 94    exp_primary -> STRING
Rule 95    exp_primary -> TRUE
Rule 96    exp_primary -> FALSE
Rule 97    exp_primary -> LPAREN exp RPAREN
Rule 98    exp_primary -> LBRACE stmts exp RBRACE
Rule 99    exp_primary -> LBRACE stmts RBRACE
Rule 100   call -> ID LPAREN args RPAREN
Rule 101   call -> ID LPAREN RPAREN
Rule 102   args -> exp
Rule 103   args -> exp COMMA args
Rule 104   type -> ID

Terminals, with rules where they appear

ARROW                : 11 13 32 34
AS                   : 
ATTRIB               : 49 50 51 55
BITAND               : 32 33 34 35 76
BITOR                : 72
BITXOR               : 74
BREAK                : 44
COLON                : 17 22 51 52
COMMA                : 16 21 34 35 103
CONST                : 51
CONTINUE             : 45
DCOLON               : 
DEINDENT             : 
DIVIDE               : 85
DIVIDEATTRIB         : 59
ELSE                 : 47 48
ENUM                 : 
EQUALS               : 65
FALSE                : 96
FN                   : 8 29
FOR                  : 
GRTR                 : 68
GRTREQ               : 70
ID                   : 8 17 19 22 23 29 49 50 51 55 56 57 58 59 93 100 101 104
IF                   : 46 47 48
IMPL                 : 
IN                   : 
INDENT               : 
LBRACE               : 18 19 23 41 42 46 47 47 48 98 99
LBRACKET             : 
LESS                 : 67
LESSEQ               : 69
LET                  : 49 50
LOGAND               : 63
LOGNOT               : 88
LOGOR                : 61
LOOP                 : 41
LPAREN               : 11 12 13 14 32 33 34 35 97 100 101
LSHIFT               : 78
MINUS                : 82 89
MINUSATTRIB          : 57
MODL                 : 86
MUT                  : 50
NEQUALS              : 66
NUMBER               : 92
PLUS                 : 81
PLUSATTRIB           : 56
PUB                  : 
RBRACE               : 18 19 23 41 42 46 47 47 48 98 99
RBRACKET             : 
REF                  : 
RETURN               : 43
RPAREN               : 11 12 13 14 32 33 34 35 97 100 101
RSHIFT               : 79
SCOLON               : 26 30 39 43 44 45 49 50 51
SELFTYPE             : 32 33 34 35
STATIC               : 
STRING               : 94
STRUCT               : 19
TIMES                : 84
TIMESATTRIB          : 58
TRAIT                : 23
TRUE                 : 95
UNION                : 
WHERE                : 
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

args                 : 100 103
body                 : 7 31
call                 : 91
decl                 : 6 38
exp                  : 39 42 43 46 47 48 49 50 51 97 98 102 103
exp_add              : 78 79 80 81 82
exp_and              : 61 62 63
exp_assign           : 54 55 56 57 58 59
exp_bitand           : 74 75 76
exp_bitor            : 65 65 66 66 67 67 68 68 69 69 70 70 71 72
exp_bitxor           : 72 73 74
exp_mul              : 81 82 83 84 85 86
exp_or               : 60 61
exp_primary          : 90
exp_rel              : 63 64
exp_shift            : 76 77 78 79
exp_unary            : 84 85 86 87 88 89
funcdecl             : 3 27
ifr                  : 40 48
program              : 2 0
signature            : 7 26
signaturei           : 8
signaturenp          : 10
signaturep           : 9
sigparam             : 15 16
sigparams            : 11 12 16 34 35
stmt                 : 36 37
stmts                : 18 37 41 42 46 47 47 48 98 99
structdecl           : 4
structfield          : 20 21
structfields         : 19 21
topdecl              : 1 2
traitbody            : 23 25
traitdecl            : 5
traitmethod          : 28
traitsignature       : 29
traitsignaturep      : 30 31
traitsignatures      : 24 25
type                 : 11 13 17 22 32 34 51 52
typedecl             : 49 50

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . topdecl
    (2) program -> . topdecl program
    (3) topdecl -> . funcdecl
    (4) topdecl -> . structdecl
    (5) topdecl -> . traitdecl
    (6) topdecl -> . decl
    (7) funcdecl -> . signature body
    (19) structdecl -> . STRUCT ID LBRACE structfields RBRACE
    (23) traitdecl -> . TRAIT ID LBRACE traitbody RBRACE
    (49) decl -> . LET ID typedecl ATTRIB exp SCOLON
    (50) decl -> . LET MUT ID typedecl ATTRIB exp SCOLON
    (51) decl -> . CONST ID COLON type ATTRIB exp SCOLON
    (8) signature -> . FN ID signaturei

    STRUCT          shift and go to state 8
    TRAIT           shift and go to state 9
    LET             shift and go to state 10
    CONST           shift and go to state 11
    FN              shift and go to state 12

    program                        shift and go to state 1
    topdecl                        shift and go to state 2
    funcdecl                       shift and go to state 3
    structdecl                     shift and go to state 4
    traitdecl                      shift and go to state 5
    decl                           shift and go to state 6
    signature                      shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> topdecl .
    (2) program -> topdecl . program
    (1) program -> . topdecl
    (2) program -> . topdecl program
    (3) topdecl -> . funcdecl
    (4) topdecl -> . structdecl
    (5) topdecl -> . traitdecl
    (6) topdecl -> . decl
    (7) funcdecl -> . signature body
    (19) structdecl -> . STRUCT ID LBRACE structfields RBRACE
    (23) traitdecl -> . TRAIT ID LBRACE traitbody RBRACE
    (49) decl -> . LET ID typedecl ATTRIB exp SCOLON
    (50) decl -> . LET MUT ID typedecl ATTRIB exp SCOLON
    (51) decl -> . CONST ID COLON type ATTRIB exp SCOLON
    (8) signature -> . FN ID signaturei

    $end            reduce using rule 1 (program -> topdecl .)
    STRUCT          shift and go to state 8
    TRAIT           shift and go to state 9
    LET             shift and go to state 10
    CONST           shift and go to state 11
    FN              shift and go to state 12

    topdecl                        shift and go to state 2
    program                        shift and go to state 13
    funcdecl                       shift and go to state 3
    structdecl                     shift and go to state 4
    traitdecl                      shift and go to state 5
    decl                           shift and go to state 6
    signature                      shift and go to state 7

state 3

    (3) topdecl -> funcdecl .

    STRUCT          reduce using rule 3 (topdecl -> funcdecl .)
    TRAIT           reduce using rule 3 (topdecl -> funcdecl .)
    LET             reduce using rule 3 (topdecl -> funcdecl .)
    CONST           reduce using rule 3 (topdecl -> funcdecl .)
    FN              reduce using rule 3 (topdecl -> funcdecl .)
    $end            reduce using rule 3 (topdecl -> funcdecl .)


state 4

    (4) topdecl -> structdecl .

    STRUCT          reduce using rule 4 (topdecl -> structdecl .)
    TRAIT           reduce using rule 4 (topdecl -> structdecl .)
    LET             reduce using rule 4 (topdecl -> structdecl .)
    CONST           reduce using rule 4 (topdecl -> structdecl .)
    FN              reduce using rule 4 (topdecl -> structdecl .)
    $end            reduce using rule 4 (topdecl -> structdecl .)


state 5

    (5) topdecl -> traitdecl .

    STRUCT          reduce using rule 5 (topdecl -> traitdecl .)
    TRAIT           reduce using rule 5 (topdecl -> traitdecl .)
    LET             reduce using rule 5 (topdecl -> traitdecl .)
    CONST           reduce using rule 5 (topdecl -> traitdecl .)
    FN              reduce using rule 5 (topdecl -> traitdecl .)
    $end            reduce using rule 5 (topdecl -> traitdecl .)


state 6

    (6) topdecl -> decl .

    STRUCT          reduce using rule 6 (topdecl -> decl .)
    TRAIT           reduce using rule 6 (topdecl -> decl .)
    LET             reduce using rule 6 (topdecl -> decl .)
    CONST           reduce using rule 6 (topdecl -> decl .)
    FN              reduce using rule 6 (topdecl -> decl .)
    $end            reduce using rule 6 (topdecl -> decl .)


state 7

    (7) funcdecl -> signature . body
    (18) body -> . LBRACE stmts RBRACE

    LBRACE          shift and go to state 15

    body                           shift and go to state 14

state 8

    (19) structdecl -> STRUCT . ID LBRACE structfields RBRACE

    ID              shift and go to state 16


state 9

    (23) traitdecl -> TRAIT . ID LBRACE traitbody RBRACE

    ID              shift and go to state 17


state 10

    (49) decl -> LET . ID typedecl ATTRIB exp SCOLON
    (50) decl -> LET . MUT ID typedecl ATTRIB exp SCOLON

    ID              shift and go to state 18
    MUT             shift and go to state 19


state 11

    (51) decl -> CONST . ID COLON type ATTRIB exp SCOLON

    ID              shift and go to state 20


state 12

    (8) signature -> FN . ID signaturei

    ID              shift and go to state 21


state 13

    (2) program -> topdecl program .

    $end            reduce using rule 2 (program -> topdecl program .)


state 14

    (7) funcdecl -> signature body .

    STRUCT          reduce using rule 7 (funcdecl -> signature body .)
    TRAIT           reduce using rule 7 (funcdecl -> signature body .)
    LET             reduce using rule 7 (funcdecl -> signature body .)
    CONST           reduce using rule 7 (funcdecl -> signature body .)
    FN              reduce using rule 7 (funcdecl -> signature body .)
    $end            reduce using rule 7 (funcdecl -> signature body .)
    RBRACE          reduce using rule 7 (funcdecl -> signature body .)


state 15

    (18) body -> LBRACE . stmts RBRACE
    (36) stmts -> . stmt
    (37) stmts -> . stmt stmts
    (38) stmt -> . decl
    (39) stmt -> . exp SCOLON
    (40) stmt -> . ifr
    (41) stmt -> . LOOP LBRACE stmts RBRACE
    (42) stmt -> . WHILE exp LBRACE stmts RBRACE
    (43) stmt -> . RETURN exp SCOLON
    (44) stmt -> . BREAK SCOLON
    (45) stmt -> . CONTINUE SCOLON
    (49) decl -> . LET ID typedecl ATTRIB exp SCOLON
    (50) decl -> . LET MUT ID typedecl ATTRIB exp SCOLON
    (51) decl -> . CONST ID COLON type ATTRIB exp SCOLON
    (54) exp -> . exp_assign
    (46) ifr -> . IF exp LBRACE stmts RBRACE
    (47) ifr -> . IF exp LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (48) ifr -> . IF exp LBRACE stmts RBRACE ELSE ifr
    (55) exp_assign -> . ID ATTRIB exp_assign
    (56) exp_assign -> . ID PLUSATTRIB exp_assign
    (57) exp_assign -> . ID MINUSATTRIB exp_assign
    (58) exp_assign -> . ID TIMESATTRIB exp_assign
    (59) exp_assign -> . ID DIVIDEATTRIB exp_assign
    (60) exp_assign -> . exp_or
    (61) exp_or -> . exp_or LOGOR exp_and
    (62) exp_or -> . exp_and
    (63) exp_and -> . exp_and LOGAND exp_rel
    (64) exp_and -> . exp_rel
    (65) exp_rel -> . exp_bitor EQUALS exp_bitor
    (66) exp_rel -> . exp_bitor NEQUALS exp_bitor
    (67) exp_rel -> . exp_bitor LESS exp_bitor
    (68) exp_rel -> . exp_bitor GRTR exp_bitor
    (69) exp_rel -> . exp_bitor LESSEQ exp_bitor
    (70) exp_rel -> . exp_bitor GRTREQ exp_bitor
    (71) exp_rel -> . exp_bitor
    (72) exp_bitor -> . exp_bitor BITOR exp_bitxor
    (73) exp_bitor -> . exp_bitxor
    (74) exp_bitxor -> . exp_bitxor BITXOR exp_bitand
    (75) exp_bitxor -> . exp_bitand
    (76) exp_bitand -> . exp_bitand BITAND exp_shift
    (77) exp_bitand -> . exp_shift
    (78) exp_shift -> . exp_shift LSHIFT exp_add
    (79) exp_shift -> . exp_shift RSHIFT exp_add
    (80) exp_shift -> . exp_add
    (81) exp_add -> . exp_add PLUS exp_mul
    (82) exp_add -> . exp_add MINUS exp_mul
    (83) exp_add -> . exp_mul
    (84) exp_mul -> . exp_mul TIMES exp_unary
    (85) exp_mul -> . exp_mul DIVIDE exp_unary
    (86) exp_mul -> . exp_mul MODL exp_unary
    (87) exp_mul -> . exp_unary
    (88) exp_unary -> . LOGNOT exp_unary
    (89) exp_unary -> . MINUS exp_unary
    (90) exp_unary -> . exp_primary
    (91) exp_primary -> . call
    (92) exp_primary -> . NUMBER
    (93) exp_primary -> . ID
    (94) exp_primary -> . STRING
    (95) exp_primary -> . TRUE
    (96) exp_primary -> . FALSE
    (97) exp_primary -> . LPAREN exp RPAREN
    (98) exp_primary -> . LBRACE stmts exp RBRACE
    (99) exp_primary -> . LBRACE stmts RBRACE
    (100) call -> . ID LPAREN args RPAREN
    (101) call -> . ID LPAREN RPAREN

    LOOP            shift and go to state 28
    WHILE           shift and go to state 29
    RETURN          shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    LET             shift and go to state 10
    CONST           shift and go to state 11
    IF              shift and go to state 35
    ID              shift and go to state 33
    LOGNOT          shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 50
    STRING          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    LPAREN          shift and go to state 54
    LBRACE          shift and go to state 22

    stmts                          shift and go to state 23
    stmt                           shift and go to state 24
    decl                           shift and go to state 25
    exp                            shift and go to state 26
    ifr                            shift and go to state 27
    exp_assign                     shift and go to state 34
    exp_or                         shift and go to state 36
    exp_and                        shift and go to state 37
    exp_rel                        shift and go to state 38
    exp_bitor                      shift and go to state 39
    exp_bitxor                     shift and go to state 40
    exp_bitand                     shift and go to state 41
    exp_shift                      shift and go to state 42
    exp_add                        shift and go to state 43
    exp_mul                        shift and go to state 44
    exp_unary                      shift and go to state 46
    exp_primary                    shift and go to state 48
    call                           shift and go to state 49

state 16

    (19) structdecl -> STRUCT ID . LBRACE structfields RBRACE

    LBRACE          shift and go to state 55


state 17

    (23) traitdecl -> TRAIT ID . LBRACE traitbody RBRACE

    LBRACE          shift and go to state 56


state 18

    (49) decl -> LET ID . typedecl ATTRIB exp SCOLON
    (52) typedecl -> . COLON type
    (53) typedecl -> .

    COLON           shift and go to state 58
    ATTRIB          reduce using rule 53 (typedecl -> .)

    typedecl                       shift and go to state 57

state 19

    (50) decl -> LET MUT . ID typedecl ATTRIB exp SCOLON

    ID              shift and go to state 59


state 20

    (51) decl -> CONST ID . COLON type ATTRIB exp SCOLON

    COLON           shift and go to state 60


state 21

    (8) signature -> FN ID . signaturei
    (9) signaturei -> . signaturep
    (10) signaturei -> . signaturenp
    (11) signaturep -> . LPAREN sigparams RPAREN ARROW type
    (12) signaturep -> . LPAREN sigparams RPAREN
    (13) signaturenp -> . LPAREN RPAREN ARROW type
    (14) signaturenp -> . LPAREN RPAREN

    LPAREN          shift and go to state 64

    signaturei                     shift and go to state 61
    signaturep                     shift and go to state 62
    signaturenp                    shift and go to state 63

state 22

    (98) exp_primary -> LBRACE . stmts exp RBRACE
    (99) exp_primary -> LBRACE . stmts RBRACE
    (36) stmts -> . stmt
    (37) stmts -> . stmt stmts
    (38) stmt -> . decl
    (39) stmt -> . exp SCOLON
    (40) stmt -> . ifr
    (41) stmt -> . LOOP LBRACE stmts RBRACE
    (42) stmt -> . WHILE exp LBRACE stmts RBRACE
    (43) stmt -> . RETURN exp SCOLON
    (44) stmt -> . BREAK SCOLON
    (45) stmt -> . CONTINUE SCOLON
    (49) decl -> . LET ID typedecl ATTRIB exp SCOLON
    (50) decl -> . LET MUT ID typedecl ATTRIB exp SCOLON
    (51) decl -> . CONST ID COLON type ATTRIB exp SCOLON
    (54) exp -> . exp_assign
    (46) ifr -> . IF exp LBRACE stmts RBRACE
    (47) ifr -> . IF exp LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (48) ifr -> . IF exp LBRACE stmts RBRACE ELSE ifr
    (55) exp_assign -> . ID ATTRIB exp_assign
    (56) exp_assign -> . ID PLUSATTRIB exp_assign
    (57) exp_assign -> . ID MINUSATTRIB exp_assign
    (58) exp_assign -> . ID TIMESATTRIB exp_assign
    (59) exp_assign -> . ID DIVIDEATTRIB exp_assign
    (60) exp_assign -> . exp_or
    (61) exp_or -> . exp_or LOGOR exp_and
    (62) exp_or -> . exp_and
    (63) exp_and -> . exp_and LOGAND exp_rel
    (64) exp_and -> . exp_rel
    (65) exp_rel -> . exp_bitor EQUALS exp_bitor
    (66) exp_rel -> . exp_bitor NEQUALS exp_bitor
    (67) exp_rel -> . exp_bitor LESS exp_bitor
    (68) exp_rel -> . exp_bitor GRTR exp_bitor
    (69) exp_rel -> . exp_bitor LESSEQ exp_bitor
    (70) exp_rel -> . exp_bitor GRTREQ exp_bitor
    (71) exp_rel -> . exp_bitor
    (72) exp_bitor -> . exp_bitor BITOR exp_bitxor
    (73) exp_bitor -> . exp_bitxor
    (74) exp_bitxor -> . exp_bitxor BITXOR exp_bitand
    (75) exp_bitxor -> . exp_bitand
    (76) exp_bitand -> . exp_bitand BITAND exp_shift
    (77) exp_bitand -> . exp_shift
    (78) exp_shift -> . exp_shift LSHIFT exp_add
    (79) exp_shift -> . exp_shift RSHIFT exp_add
    (80) exp_shift -> . exp_add
    (81) exp_add -> . exp_add PLUS exp_mul
    (82) exp_add -> . exp_add MINUS exp_mul
    (83) exp_add -> . exp_mul
    (84) exp_mul -> . exp_mul TIMES exp_unary
    (85) exp_mul -> . exp_mul DIVIDE exp_unary
    (86) exp_mul -> . exp_mul MODL exp_unary
    (87) exp_mul -> . exp_unary
    (88) exp_unary -> . LOGNOT exp_unary
    (89) exp_unary -> . MINUS exp_unary
    (90) exp_unary -> . exp_primary
    (91) exp_primary -> . call
    (92) exp_primary -> . NUMBER
    (93) exp_primary -> . ID
    (94) exp_primary -> . STRING
    (95) exp_primary -> . TRUE
    (96) exp_primary -> . FALSE
    (97) exp_primary -> . LPAREN exp RPAREN
    (98) exp_primary -> . LBRACE stmts exp RBRACE
    (99) exp_primary -> . LBRACE stmts RBRACE
    (100) call -> . ID LPAREN args RPAREN
    (101) call -> . ID LPAREN RPAREN

    LOOP            shift and go to state 28
    WHILE           shift and go to state 29
    RETURN          shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    LET             shift and go to state 10
    CONST           shift and go to state 11
    IF              shift and go to state 35
    ID              shift and go to state 33
    LOGNOT          shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 50
    STRING          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    LPAREN          shift and go to state 54
    LBRACE          shift and go to state 22

    stmts                          shift and go to state 65
    exp                            shift and go to state 26
    stmt                           shift and go to state 24
    decl                           shift and go to state 25
    ifr                            shift and go to state 27
    exp_assign                     shift and go to state 34
    exp_or                         shift and go to state 36
    exp_and                        shift and go to state 37
    exp_rel                        shift and go to state 38
    exp_bitor                      shift and go to state 39
    exp_bitxor                     shift and go to state 40
    exp_bitand                     shift and go to state 41
    exp_shift                      shift and go to state 42
    exp_add                        shift and go to state 43
    exp_mul                        shift and go to state 44
    exp_unary                      shift and go to state 46
    exp_primary                    shift and go to state 48
    call                           shift and go to state 49

state 23

    (18) body -> LBRACE stmts . RBRACE

    RBRACE          shift and go to state 66


state 24

    (36) stmts -> stmt .
    (37) stmts -> stmt . stmts
    (36) stmts -> . stmt
    (37) stmts -> . stmt stmts
    (38) stmt -> . decl
    (39) stmt -> . exp SCOLON
    (40) stmt -> . ifr
    (41) stmt -> . LOOP LBRACE stmts RBRACE
    (42) stmt -> . WHILE exp LBRACE stmts RBRACE
    (43) stmt -> . RETURN exp SCOLON
    (44) stmt -> . BREAK SCOLON
    (45) stmt -> . CONTINUE SCOLON
    (49) decl -> . LET ID typedecl ATTRIB exp SCOLON
    (50) decl -> . LET MUT ID typedecl ATTRIB exp SCOLON
    (51) decl -> . CONST ID COLON type ATTRIB exp SCOLON
    (54) exp -> . exp_assign
    (46) ifr -> . IF exp LBRACE stmts RBRACE
    (47) ifr -> . IF exp LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (48) ifr -> . IF exp LBRACE stmts RBRACE ELSE ifr
    (55) exp_assign -> . ID ATTRIB exp_assign
    (56) exp_assign -> . ID PLUSATTRIB exp_assign
    (57) exp_assign -> . ID MINUSATTRIB exp_assign
    (58) exp_assign -> . ID TIMESATTRIB exp_assign
    (59) exp_assign -> . ID DIVIDEATTRIB exp_assign
    (60) exp_assign -> . exp_or
    (61) exp_or -> . exp_or LOGOR exp_and
    (62) exp_or -> . exp_and
    (63) exp_and -> . exp_and LOGAND exp_rel
    (64) exp_and -> . exp_rel
    (65) exp_rel -> . exp_bitor EQUALS exp_bitor
    (66) exp_rel -> . exp_bitor NEQUALS exp_bitor
    (67) exp_rel -> . exp_bitor LESS exp_bitor
    (68) exp_rel -> . exp_bitor GRTR exp_bitor
    (69) exp_rel -> . exp_bitor LESSEQ exp_bitor
    (70) exp_rel -> . exp_bitor GRTREQ exp_bitor
    (71) exp_rel -> . exp_bitor
    (72) exp_bitor -> . exp_bitor BITOR exp_bitxor
    (73) exp_bitor -> . exp_bitxor
    (74) exp_bitxor -> . exp_bitxor BITXOR exp_bitand
    (75) exp_bitxor -> . exp_bitand
    (76) exp_bitand -> . exp_bitand BITAND exp_shift
    (77) exp_bitand -> . exp_shift
    (78) exp_shift -> . exp_shift LSHIFT exp_add
    (79) exp_shift -> . exp_shift RSHIFT exp_add
    (80) exp_shift -> . exp_add
    (81) exp_add -> . exp_add PLUS exp_mul
    (82) exp_add -> . exp_add MINUS exp_mul
    (83) exp_add -> . exp_mul
    (84) exp_mul -> . exp_mul TIMES exp_unary
    (85) exp_mul -> . exp_mul DIVIDE exp_unary
    (86) exp_mul -> . exp_mul MODL exp_unary
    (87) exp_mul -> . exp_unary
    (88) exp_unary -> . LOGNOT exp_unary
    (89) exp_unary -> . MINUS exp_unary
    (90) exp_unary -> . exp_primary
    (91) exp_primary -> . call
    (92) exp_primary -> . NUMBER
    (93) exp_primary -> . ID
    (94) exp_primary -> . STRING
    (95) exp_primary -> . TRUE
    (96) exp_primary -> . FALSE
    (97) exp_primary -> . LPAREN exp RPAREN
    (98) exp_primary -> . LBRACE stmts exp RBRACE
    (99) exp_primary -> . LBRACE stmts RBRACE
    (100) call -> . ID LPAREN args RPAREN
    (101) call -> . ID LPAREN RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LOGNOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    RBRACE          reduce using rule 36 (stmts -> stmt .)
    LOOP            shift and go to state 28
    WHILE           shift and go to state 29
    RETURN          shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    LET             shift and go to state 10
    CONST           shift and go to state 11
    IF              shift and go to state 35
    ID              shift and go to state 33
    LOGNOT          shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 50
    STRING          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    LPAREN          shift and go to state 54
    LBRACE          shift and go to state 22

  ! ID              [ reduce using rule 36 (stmts -> stmt .) ]
  ! LOGNOT          [ reduce using rule 36 (stmts -> stmt .) ]
  ! MINUS           [ reduce using rule 36 (stmts -> stmt .) ]
  ! NUMBER          [ reduce using rule 36 (stmts -> stmt .) ]
  ! STRING          [ reduce using rule 36 (stmts -> stmt .) ]
  ! TRUE            [ reduce using rule 36 (stmts -> stmt .) ]
  ! FALSE           [ reduce using rule 36 (stmts -> stmt .) ]
  ! LPAREN          [ reduce using rule 36 (stmts -> stmt .) ]
  ! LBRACE          [ reduce using rule 36 (stmts -> stmt .) ]

    stmt                           shift and go to state 24
    stmts                          shift and go to state 67
    decl                           shift and go to state 25
    exp                            shift and go to state 26
    ifr                            shift and go to state 27
    exp_assign                     shift and go to state 34
    exp_or                         shift and go to state 36
    exp_and                        shift and go to state 37
    exp_rel                        shift and go to state 38
    exp_bitor                      shift and go to state 39
    exp_bitxor                     shift and go to state 40
    exp_bitand                     shift and go to state 41
    exp_shift                      shift and go to state 42
    exp_add                        shift and go to state 43
    exp_mul                        shift and go to state 44
    exp_unary                      shift and go to state 46
    exp_primary                    shift and go to state 48
    call                           shift and go to state 49

state 25

    (38) stmt -> decl .

    LOOP            reduce using rule 38 (stmt -> decl .)
    WHILE           reduce using rule 38 (stmt -> decl .)
    RETURN          reduce using rule 38 (stmt -> decl .)
    BREAK           reduce using rule 38 (stmt -> decl .)
    CONTINUE        reduce using rule 38 (stmt -> decl .)
    LET             reduce using rule 38 (stmt -> decl .)
    CONST           reduce using rule 38 (stmt -> decl .)
    IF              reduce using rule 38 (stmt -> decl .)
    ID              reduce using rule 38 (stmt -> decl .)
    LOGNOT          reduce using rule 38 (stmt -> decl .)
    MINUS           reduce using rule 38 (stmt -> decl .)
    NUMBER          reduce using rule 38 (stmt -> decl .)
    STRING          reduce using rule 38 (stmt -> decl .)
    TRUE            reduce using rule 38 (stmt -> decl .)
    FALSE           reduce using rule 38 (stmt -> decl .)
    LPAREN          reduce using rule 38 (stmt -> decl .)
    LBRACE          reduce using rule 38 (stmt -> decl .)
    RBRACE          reduce using rule 38 (stmt -> decl .)


state 26

    (39) stmt -> exp . SCOLON

    SCOLON          shift and go to state 68


state 27

    (40) stmt -> ifr .
